manifests/dev/zobsai-uni-company-panel-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uni-company-panel # Changed _ to -
  namespace: dev-zobsai
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
  labels:
    app: uni-company-panel
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: uni-company-panel
  template:
    metadata:
      labels:
        app: uni-company-panel
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: uni-company-panel
          image: ghcr.io/zobsai-com/zobsai-uni-company-panel:d40340bb380cc34b6cd578b5d2fbc4bba7b3b017
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
