manifests/dev/zobsai-frontend-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zobsai-frontend
  namespace: dev-zobsai
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
  labels:
    app: zobsai-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: zobsai-frontend
  template:
    metadata:
      labels:
        app: zobsai-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/zobsai-com/zobsai-frontend:ef3362b0f94edc99babdd357aa4a36b7bbf7cccd
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: zobsai-frontend
  namespace: dev-zobsai
spec:
  type: NodePort
  selector:
    app: zobsai-frontend
  ports:
    - port: 3000 # Service port
      targetPort: 3000 # Container port
      nodePort: 30030 # NodePort (optional, can be omitted)
