manifests/dev/zobsai-uni-admin-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zobsai-uni-admin
  namespace: dev-zobsai
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
  labels:
    app: zobsai-uni-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zobsai-uni-admin
  template:
    metadata:
      labels:
        app: zobsai-uni-admin
    spec:
      containers:
        - name: uni-admin
          image: ghcr.io/zobsai-com/zobsai-uni-admin:cc7efd762e5fe388b4f4fd1d2a89b998d44928cc
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: zobsai-uni-admin
  namespace: dev-zobsai
spec:
  type: NodePort
  selector:
    app: zobsai-uni-admin
  ports:
    - port: 3002 # Service port
      targetPort: 3002 # Container port
      nodePort: 30032 # NodePort (optional, can be omitted)
