manifests/dev/zobsai-uni-company-panel-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: zobsai-uni-company-panel
  namespace: dev-zobsai
spec:
  type: NodePort
  selector:
    app: uni-company-panel   # <-- must match pod labels
  ports:
    - port: 3002
      targetPort: 3002
      nodePort: 30032
