manifests/dev/zobsai-uni_company_panel-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uni_company_panel
  namespace: dev-zobsai
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
  labels:
    app: uni_company_panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uni_company_panel
  template:
    metadata:
      labels:
        app: uni_company_panel
    spec:
      containers:
        - name: uni_company_panel
          image: ghcr.io/zobsai-com/zobsai-uni_company_panel:297f4d2fb6d7a36bdf3910c4b38a0ef1e9006731
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: uni_company_panel
  namespace: dev-zobsai
spec:
  type: NodePort
  selector:
    app: uni_company_panel
  ports:
    - port: 3002 # Service port
      targetPort: 3002 # Container port
      nodePort: 30032 # NodePort (optional, can be omitted)
